--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
       # Snake Animation
       - uses: Platane/snk@master
-        id: snake-gif:
+        id: snake-gif
 with:
           github_user_name: nouzen-dev
           svg_out_path: dist/github-contribution-grid-snake.svg
